--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -21,17 +21,20 @@ jobs:
           python-version: '3.13'
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
+        run: python -m pip install --upgrade pip
 
       - name: Generate README
-        run: |
-          python generate_readme.py  
+        run: python generate_readme.py
 
       - name: Commit and push README
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md
           git commit -m "Update README.md via GitHub Actions" || echo "No changes to commit"
+          
+          # Replace remote URL with token-based URL
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/IvanShepeta/LeetCode.git
           git push origin HEAD:master
